# swarmalators

./: .gitignore  .python-version  README.md  default_camera.json  pyproject.toml  requirements.txt  test.py
swarmalators/: main.py  record.py  swarmalator.py  test.py  test_camera.py  uvc_camera_test.py
swarmalators/nRFSwarmalator/: __init__.py  nRFSwarmalator.py
swarmalators/tracker/: __init__.py  _sort.py  _tracker_filters.py  _video_stream.py  _video_stream_cv.py  _video_stream_opencv.py  _video_stream_pyuvc.py  direction.py  euclid_tracker.py  tracker.py
swarmalators/tracker/util/: _c930e.py  _color.py  uvc-util
tests/: camera_test.py  get_cameras.py  swarmalator_test.py
